# Fracture-phase-field-modeling

./: BoundaryConditions.cpp  BoundaryConditions.h  CMakeLists.txt  Config.cpp  Config.h  ConstitutiveModel.cpp  ConstitutiveModel.h  ElementUtils.cpp  ElementUtils.h  FEMINPUT.h  Gauss.cpp  Gauss.h  GmshReader.cpp  GmshReader.h  History.cpp  History.h  Jacob2.cpp  Jacob2.h  MeshGeneration.cpp  MeshGeneration.h  NeumannBC.cpp  NeumannBC.h  Output.cpp  Output.h  README.md  ResidualPFM.cpp  ResidualPFM.h  ShapeFunc.cpp  ShapeFunc.h  Solver.cpp  Solver.h  StiffnessPFM.cpp  StiffnessPFM.h  config.toml  force_disp_plot.html  main.cpp  stagger_energy_plot.html
.devcontainer/: devcontainer.json
